<resources>
    <string name="app_name">Pokedex</string>
    <string name="search">Search</string>
    <string name="display_as">Display as</string>
    <string name="show_random_20">Show Random 20</string>
    <string name="min_atk">Min ATK: %d</string>
    <string name="min_def">Min DEF: %d</string>
    <string name="min_hp">Min HP: %d</string>
    <string name="total">Total:</string>
    <string name="spdefense">SpDefense</string>
    <string name="spattack">SpAttack</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="speed">Speed</string>
    <string name="hp">HP</string>
    <string name="species">Species:</string>
    <string name="pokemon">Pokemon #:</string>
    <string name="name">Name:</string>
    <string name="search_this_pokemon">Search this Pokemon</string>
    <string name="dark">Dark</string>
    <string name="dragon">Dragon</string>
    <string name="electric">Electric</string>
    <string name="fairy">Fairy</string>
    <string name="fighting">Fighting</string>
    <string name="fire">Fire</string>
    <string name="flying">Flying</string>
    <string name="ghost">Ghost</string>
    <string name="grass">Grass</string>
    <string name="ground">Ground</string>
    <string name="ice">Ice</string>
    <string name="normal">Normal</string>
    <string name="poison">Poison</string>
    <string name="psychic">Psychic</string>
    <string name="rock">Rock</string>
    <string name="steel">Steel</string>
    <string name="water">Water</string>
    <string name="check_all">Check All</string>
    <string name="save_choices">Save Choices</string>
</resources>
