<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greygradient"
    tools:context="com.example.nzp.pokedex.PokemonDisplay"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/greygradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/pokemonPic"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pokemonPic"
            android:layout_centerHorizontal="true"
            android:autofillHints="?android:attr/colorControlNormal"
            android:backgroundTint="?android:attr/textColorSecondary"
            android:text="@string/search_this_pokemon"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="195dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchButton"
            android:layout_toEndOf="@+id/attackTitle"
            android:layout_toRightOf="@+id/attackTitle"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pokemonID"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchButton"
            android:layout_toEndOf="@+id/tag1"
            android:layout_toRightOf="@+id/tag1"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/speciesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pokemonPic"
            android:layout_alignStart="@+id/pokemonPic"
            android:layout_below="@+id/tag5"
            android:layout_marginTop="8dp"
            android:text="@string/species"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/speciesTitle"
            android:layout_alignStart="@+id/speciesTitle"
            android:layout_below="@+id/speciesTitle"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/tag1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/pokemonID"
            android:layout_marginTop="16dp"
            android:layout_toLeftOf="@+id/pokemonPic"
            android:layout_toStartOf="@+id/pokemonPic"
            android:background="@drawable/heart" />

        <TextView
            android:id="@+id/HPTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tag1"
            android:layout_toEndOf="@+id/tag1"
            android:layout_toRightOf="@+id/tag1"
            android:text="@string/hp"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/HP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/HPTitle"
            android:layout_alignStart="@+id/HPTitle"
            android:layout_below="@+id/HPTitle"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/tag2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/HP"
            android:layout_alignEnd="@+id/pokemonPic"
            android:layout_alignRight="@+id/pokemonPic"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            app:srcCompat="@drawable/boot" />

        <TextView
            android:id="@+id/speedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/defenseTitle"
            android:layout_alignStart="@+id/defenseTitle"
            android:layout_alignTop="@+id/tag2"
            android:text="@string/speed"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/defenseTitle"
            android:layout_toEndOf="@+id/tag4"
            android:layout_toRightOf="@+id/tag4"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/tag3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tag1"
            android:layout_toLeftOf="@+id/HP"
            android:layout_toStartOf="@+id/HP"
            app:srcCompat="@drawable/sword" />

        <TextView
            android:id="@+id/attackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tag3"
            android:layout_toEndOf="@+id/tag3"
            android:layout_toRightOf="@+id/tag3"
            android:text="@string/attack"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/attackTitle"
            android:layout_toEndOf="@+id/tag3"
            android:layout_toRightOf="@+id/tag3"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/tag4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/tag2"
            android:layout_alignStart="@+id/tag2"
            android:layout_alignTop="@+id/attackTitle"
            app:srcCompat="@drawable/physicaldefense" />

        <TextView
            android:id="@+id/defenseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/attackTitle"
            android:layout_toEndOf="@+id/tag4"
            android:layout_toRightOf="@+id/tag4"
            android:text="@string/defense"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tag6"
            android:layout_toEndOf="@+id/tag6"
            android:layout_toRightOf="@+id/tag6"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/tag5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tag3"
            android:layout_toLeftOf="@+id/attack"
            android:layout_toStartOf="@+id/attack"
            app:srcCompat="@drawable/crystal" />

        <TextView
            android:id="@+id/speAttackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tag5"
            android:layout_toEndOf="@+id/tag5"
            android:layout_toRightOf="@+id/tag5"
            android:text="@string/spattack"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/specialAttack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speAttackTitle"
            android:layout_toRightOf="@+id/tag5"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/tag6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/tag4"
            android:layout_alignStart="@+id/tag4"
            android:layout_alignTop="@+id/speAttackTitle"
            app:srcCompat="@drawable/trigger" />

        <TextView
            android:id="@+id/SpeDefenseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tag6"
            android:layout_toEndOf="@+id/tag6"
            android:layout_toRightOf="@+id/tag6"
            android:text="@string/spdefense"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/specialDefense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SpeDefenseTitle"
            android:layout_toEndOf="@+id/tag6"
            android:layout_toRightOf="@+id/tag6"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/type"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/SpeDefenseTitle"
            android:layout_alignRight="@+id/SpeDefenseTitle"
            android:layout_below="@+id/searchButton"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/speciesTitle"
            android:layout_alignBottom="@+id/speciesTitle"
            android:layout_alignLeft="@+id/specialDefense"
            android:layout_alignStart="@+id/specialDefense"
            android:text="@string/total"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/species"
            android:layout_toEndOf="@+id/tag6"
            android:layout_toRightOf="@+id/tag6"
            android:text=""
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
